feat: link to cngov page with specific config parameters

--- a/src/index.html
+++ b/src/index.html
@@ -317,7 +317,7 @@
                         <li>簡體中文 ↔ 繁體中文（標準、台灣、香港）</li>
                         <li>地域用詞轉換（如「軟體」↔「软件」）</li>
                         <li>日文新字體 ↔ 舊字體</li>
-                        <li>通用規範漢字表轉換</li>
+                        <li>「通用規範漢字表」標準繁體轉換</li>
                     </ul>
                 </div>
 
@@ -480,15 +480,17 @@ console.<span class="code-function">log</span>(result);  <span class="code-comme
                     </tr>
                     <tr>
                         <td><code>t2cngov</code></td>
-                        <td>繁體或簡體 → 通用規範漢字表繁體 (來自<a
+                        <td>繁體 → 「通用規範漢字表」標準繁體 (來自<a
                                 href="https://github.com/TerryTian-tech/OpenCC-Traditional-Chinese-characters-according-to-Chinese-government-standards"
-                                target="_blank">TerryTian-Tech</a>) <a href="/cngov" class="chip">試用</a></td>
+                                target="_blank">TerryTian-Tech</a>) <a href="./cngov?config=t2cngov" class="chip">試用</a>
+                        </td>
                     </tr>
                     <tr>
                         <td><code>t2cngov_keep_simp</code></td>
-                        <td>繁體或簡體 → 通用規範漢字表繁體（保留簡體字） (來自<a
+                        <td>繁體或簡體 → 「通用規範漢字表」標準繁體（保留輸入簡體字不變） (來自<a
                                 href="https://github.com/TerryTian-tech/OpenCC-Traditional-Chinese-characters-according-to-Chinese-government-standards"
-                                target="_blank">TerryTian-Tech</a>)</td>
+                                target="_blank">TerryTian-Tech</a>) <a href="./cngov?config=t2cngov_keep_simp"
+                                class="chip">試用</a></td>
                     </tr>
                 </tbody>
             </table>
