docs: refine terminology for Chinese government standard conversion

--- a/src/cngov.html
+++ b/src/cngov.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OpenCC - 繁體至「通用規範漢字表」繁體轉換</title>
+    <title>OpenCC - 規範化為「通用規範漢字表」標準繁體</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
@@ -24,7 +24,7 @@
                 </svg>
                 <div>
                     <h1>OpenCC 轉換工具</h1>
-                    <span>「通用規範漢字表」標準繁體轉換</span>
+                    <span>規範化為「通用規範漢字表」標準繁體</span>
                 </div>
             </div>
             <div id="status" class="status-badge">
@@ -89,7 +89,7 @@
                 <a href="https://www.npmjs.com/package/opencc-wasm" class="chip" target="_blank">npm</a>
                 <a href="https://t.me/+TVq4LmPRlN9hZjE0" class="chip" target="_blank">Telegram</a>
             </p>
-            <p>本演示頁使用了 <code>t2cngov.json</code> 配置，將繁體中文轉換至「通用規範漢字表」標準。</p>
+            <p>本演示頁使用了 <code>t2cngov.json</code> 與 <code>t2cngov_keep_simp.json</code> 配置，將輸入文本規範為「通用規範漢字表」標準繁體。</p>
             <p>該配置來自 <a
                     href="https://github.com/TerryTian-tech/OpenCC-Traditional-Chinese-characters-according-to-Chinese-government-standards"
                     target="_blank">TerryTian-Tech</a>，感謝 Terry Tian 等朋友的貢獻！</p>
