--- a/src/index.html
+++ b/src/index.html
@@ -480,14 +480,14 @@ console.<span class="code-function">log</span>(result);  <span class="code-comme
                     </tr>
                     <tr>
                         <td><code>t2cngov</code></td>
-                        <td>繁體 → 「通用規範漢字表」標準繁體 (來自<a
+                        <td>規範化為「通用規範漢字表」標準繁體 (來自<a
                                 href="https://github.com/TerryTian-tech/OpenCC-Traditional-Chinese-characters-according-to-Chinese-government-standards"
                                 target="_blank">TerryTian-Tech</a>) <a href="./cngov?config=t2cngov" class="chip">試用</a>
                         </td>
                     </tr>
                     <tr>
                         <td><code>t2cngov_keep_simp</code></td>
-                        <td>繁體或簡體 → 「通用規範漢字表」標準繁體（保留輸入簡體字不變） (來自<a
+                        <td>僅規範化繁體字為「通用規範漢字表」標準繁體，簡體字保持不變 (來自<a
                                 href="https://github.com/TerryTian-tech/OpenCC-Traditional-Chinese-characters-according-to-Chinese-government-standards"
                                 target="_blank">TerryTian-Tech</a>) <a href="./cngov?config=t2cngov_keep_simp"
                                 class="chip">試用</a></td>
